--- a/robot/style.css
+++ b/robot/style.css
@@ -8,9 +8,9 @@ h1 {
 	font-family: 'Roboto', sans-serif;
 }
 
-.robots {
+/* .robots {
 	
-}
+} */
 
 .head, 
 .left_arm, 
@@ -29,9 +29,9 @@ h1 {
 	margin-bottom: 10px;
 } 
 
-.eyes {
+/* .eyes {
 	
-}
+} */
 
 .head:hover {
 	width: 300px;
